namespaces/iam/accounts-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-ui
  template:
    metadata:
      labels:
        app: accounts-ui
    spec:
      containers:
        - name: accounts-ui
          image: ghcr.io/toandos/accounts-ui:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
