namespaces/iam/accounts-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-ui
spec:
  selector:
    app: accounts-ui
  ports:
    - port: 3000
      targetPort: 3000
