namespaces/iam/accounts-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: accounts-ui
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik

  hostnames:
    - accounts.toando.de

  rules:
    - backendRefs:
        - name: accounts-ui
          port: 3000
